# mee-deepreefmap

./: .gitignore  .gitmodules  CLAUDE.md  process_transects.sh  pyproject.toml  transects.csv
example_inputs/: class_to_color.json  class_to_label.json
notebooks/: colmap_mast3r_reconstruction.ipynb  colmap_mast3r_reconstruction.py  colmap_mast3r_reconstruction_explainer.md  mast3r_feature.ipynb  mast3r_feature_app.py  match_mast3r_feature.py  scratchbook.ipynb
scripts/: download_weights.sh  extract_gravity.py
src/: export_colmap.py  export_to_csv.py  reconstruct.py  video_utils.py
src/configs/: base_config.yaml
src/segmentation/: model.py
src/sfm/: da3_estimator.py  estimator.py  legacy_estimator.py
