[project]
name = "mee-deepreefmap"
version = "1.1.0"
description = "Scalable 3D Semantic Mapping of Coral Reefs using Deep Learning"
readme = "README.md"
requires-python = ">=3.10, <3.12"
authors = ["Jonathan Sauder <josaudergh@gmail.com>"]
dependencies = [
    "addict==2.4.0",
    "gpmfstream @ git+https://github.com/hovren/gpmfstream",
    "h5py==3.7.0",
    "matplotlib==3.5.3",
    "numpy==1.26.4",
    "open3d==0.16.0",
    "pandas==1.4.4",
    "pillow==9.1",
    "scikit-image==0.24.0",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "segmentation-models-pytorch==0.3.3",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2",
    "tqdm==4.64.1",
    "transformers>=4.40.0,<4.46.0",
    "wandb==0.13.7",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
